--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ function changeCookie() {
 </div>
 <div class="check"><input type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
     <div id="footer">
-        <div id="center" align="center">
+        <div id="center">
+          <table>
             Request ID: request_id<br/>
             &copy; NGINX, Inc. 2018
         </div>
